added pagination and modified movie and series findAll endpoints